# Data-Science-Projects

3D_Object_Detection/: Dockerfile  makefile  pyproject.toml  requirements.txt  requirements_collab.txt
Bars_Reviews/: Bars_Review.ipynb
Computer_Vision/: Dockerfile  makefile  requirements.txt  requirements_collab.txt
FastAI/: InterpretationRF.ipynb  NLP.ipynb  NN_MNIST.ipynb  RF_black_box.ipynb  RF_fromscratch.ipynb  utils.py
FastAI/ML/: Dockerfile  RF_black_box.ipynb  makefile  pyproject.toml  requirements.txt
FastAI/ML/Project/Notebooks/: Rossman.ipynb  Rossman_collab.ipynb  Rossman_dataprep.ipynb
FastAI/ML/Project/src/: datasets.py  tabular_learner.py  utils.py
Fraud_Detection/: Dockerfile  makefile  requirements.txt
Luna_Classifier/: 01_GetData.ipynb  Dockerfile  dsets.py  get_data.py  makefile  model.py  precache.py  pyproject.toml  training.py  viz.py
Luna_Classifier/Project/Notebooks/: 01_Examine_Data.ipynb  01_GetData.ipynb  02_ParsingData.ipynb  02_modelling.ipynb  Untitled.ipynb
Luna_Classifier/Project/src/: dsets.py  get_data.py  precache.py
Luna_Classifier/Project/src/config/: data_config.json
Luna_Classifier/config/: data_config.json
Minning_PokemonGO/: README.md  SQL_script  Tweets.ipynb  get_tweets.py  make_database.py
NLP_Keras/: README.md
NLP_basics/: README.md
RNN_basics/: README.md  makefile  requirements.txt
Reinforcement_Learning/: Agents.py  Main.py  (+6 more)
Species_Kaggle/: Dockerfile  makefile  pyproject.toml
Species_Kaggle/Project/Notebooks/: 01_data_explore.ipynb
Species_Kaggle/Project/src/: data_utils.py  utils.py
(+36 files in other folders)
