[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Oleksandr Fialko <oleksandrfialko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.9"
kaggle = "^1.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
